# kronik

./: .env.template  .gitignore  Makefile  README.md  pyproject.toml  pytest.ini
kronik/: __init__.py  actions.py  commands.py  config.py  control.py  logger.py  main.py  models.py  session.py
kronik/be/: __init__.py  server.py
kronik/brain/: __init__.py  client.py  model.py  models.py  prompts.py  tiktok.py
kronik/control/: __init__.py  control.py  tiktok.py
kronik/device/: __init__.py  actions.py  app.py  commands.py  config.py
kronik/llm/: __init__.py  client.py  embed.py
kronik/store/: __init__.py  client.py  session.py  tiktok.py
kronik/utils/: __init__.py  av.py  tiktok_downloader.py  transcribe.py
scripts/: init.sql  setup.py
tests/: conftest.py  demo.py  test_av.py  test_tiktok_downloader.py  test_transcribe.py
tests/brain/: __init__.py  test_tiktok.py
tests/store/: __init__.py  test_integration.py  test_session.py  test_tiktok.py
