[tool.poetry]
name = "kronik"
version = "0.1.0"
description = "Chronically scrolling visual agent"
authors = ["Punit Arani <punit@punitsai36@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
appium-python-client = "^4.4.0"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
isort = "^5.13.2"
pylint = "^3.3.2"
pytest = "^8.3.4"
ruff = "^0.8.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
