[tool.poetry]
name = "kronik"
version = "0.1.0"
description = "Chronically scrolling visual agent"
authors = ["Punit Arani <punit@punitsai36@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12 <3.14"
appium-python-client = "^4.4.0"
einops = "^0.8.0"
fastapi = {extras = ["standard"], version = "^0.115.6"}
ffmpeg-python = "^0.2.0"
google-genai = "^0.3.0"
llvmlite = "^0.43.0"
lxml = "^5.3.0"
mlx-whisper = "^0.4.1"
numba = "^0.60.0"
openai = "^1.58.1"
pillow = "^11.0.0"
psutil = "^6.1.0"
pydantic = "^2.10.3"
python-dotenv = "^1.0.1"
transformers = "^4.47.0"
torch = "^2.5.1"
torchvision = "^0.20.1"
yt-dlp = "^2024.12.13"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
isort = "^5.13.2"
pylint = "^3.3.2"
pytest = "^8.3.4"
pytest-asyncio = "^0.25.0"
ruff = "^0.8.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py313']

[tool.isort]
profile = "black"
use_parentheses = true
include_trailing_comma = true
ensure_newline_before_comments = true
multi_line_output = 3
force_grid_wrap = 0
known_first_party = "kronik"

[tool.ruff]
target-version = "py313"
